<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/title_text"
            android:text="@string/event_filtering" />

        <TextView
            android:id="@+id/ui13_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />
    </RelativeLayout>

    <TextView
        style="@style/middle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devsel_colon" />

    <ListView
        android:id="@+id/ui13_lv"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <TextView
        style="@style/middle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_filter_colon" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/start_colon" />

        <EditText
            android:id="@+id/ui13_start_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:hint="@string/click_to_choose_time"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/end_colon" />

        <EditText
            android:id="@+id/ui13_end_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:hint="@string/click_to_choose_time"
            android:singleLine="true" />
    </LinearLayout>

    <TextView
        style="@style/middle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_filtering_colon" />

    <ListView
        android:id="@+id/ui13_lv2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:cacheColorHint="#00000000" />

    <Button
        android:id="@+id/ui13_query"
        style="@style/common_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/query" />

</LinearLayout>