<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app"
    android:orientation="vertical" >

    <include layout="@layout/activity_title" />

    <TextView
        style="@style/middle_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:gravity="center_horizontal"
        android:text="@string/create_a_myanviz_id" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:background="@drawable/dir"
        android:orientation="vertical" >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input"
            android:hint="@string/email_or_username"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:color/darker_gray" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:color/darker_gray" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:orientation="horizontal" >

        <CheckBox
            style="@style/middle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_with" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_conditions"
            android:textColor="#0000ff" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        style="@style/common_button"
        android:text="@string/create_new_account" />

</LinearLayout>