<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ui21_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ui21_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <TextView
            android:id="@+id/ui21_title"
            style="@style/title_text"
            android:text="@string/setting" />

        <TextView
            android:id="@+id/ui21_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ui21_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:background="@color/app"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@color/tab_default"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ui21_device_manage"
                style="@style/small_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/selector_tab_background"
                android:text="@string/device_manage" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/tab_checked" />

            <TextView
                android:id="@+id/ui21_feature_set"
                style="@style/small_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/selector_tab_background"
                android:text="@string/feature_set" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/tab_checked" />

            <TextView
                style="@style/small_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/selector_tab_background"
                android:text="@string/account_settings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@color/input"
            android:orientation="vertical" >

            <TextView
                style="@style/small_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/selector_tab_background"
                android:text="@string/snapshot_images" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/tab_checked" />

            <TextView
                android:id="@+id/ui21_information"
                style="@style/small_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/selector_tab_background"
                android:text="@string/information" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@color/input"
            android:orientation="vertical" >

            <TextView
                style="@style/small_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/selector_tab_background"
                android:text="@string/mobile_traffic_statistics" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/tab_checked" />

            <TextView
                style="@style/small_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/selector_tab_background"
                android:text="@string/feedback" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/tab_checked" />

            <TextView
                style="@style/small_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/selector_tab_background"
                android:text="@string/help" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>